--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -8095,7 +8095,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- some helps from old student projects from github\n",
+    "- some helps from old student projects from github https://github.com/ahmed-gharib89/wrangle-and-analyze_data\n",
     "- Reading pandas data frame row by row [Stack over flow](https://stackoverflow.com/questions/16476924/how-to-iterate-over-rows-in-a-dataframe-in-pandas)\n",
     "- For the word cloud funny image I followed this [tutorial](https://www.datacamp.com/community/tutorials/wordcloud-python) at [DataCamp](www.datacamp.com)"
    ]
